--- a/book.toml
+++ b/book.toml
@@ -1,8 +1,8 @@
 [book]
-authors = ["TemporAnon"]
+authors = ["TaoBard"]
 description = "Bittensor Documentation covers the usage, installation, and development of Bittensor."
 language = "en"
 multilingual = false
 src = "src"
-title = "Welcome to TaoEdu"
+title = "Better Documentation"
 
