--- a/book.toml
+++ b/book.toml
@@ -4,5 +4,5 @@ description = "Bittensor Documentation covers the usage, installation, and devel
 language = "en"
 multilingual = false
 src = "src"
-title = "Better Documentation"
+title = "TaoEdu"
 
