--- a/book.toml
+++ b/book.toml
@@ -1,8 +1,8 @@
 [book]
 authors = ["TaoBard"]
-description = "Bittensor Documentation covers the usage, installation, and development of Bittensor."
+description = "Bittensor Documentation covering the usage, installation, and development of Bittensor/skills adjacent."
 language = "en"
 multilingual = false
 src = "src"
-title = "TaoEdu"
+title = "TaoDocs"
 
